# libhelmath

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENCE  README.md  index.html  params.json
src/: helmath.cpp  helmath.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h  vector.cpp  vector.h
src/include/: helmath.h  matrix.h  vector.h
src/include/internal/: swizzle.h  swizzle2_class_macros.h  swizzle3_class_macros.h  swizzle4_class_macros.h  swizzle_class_macros.h  utils.h
tests/: CMakeLists.txt
tests/matrix/: CMakeLists.txt
tests/matrix/mat2/: mat2_tests.cpp
tests/matrix/matrix2/: CMakeLists.txt  matrix2_tests.cpp
tests/matrix/matrix3/: CMakeLists.txt  matrix3_tests.cpp
tests/matrix/matrix4/: CMakeLists.txt  matrix4_tests.cpp
tests/vec3/vec3_double_tests/: CMakeLists.txt  vec3_double_tests.cpp
tests/vec3/vec3_float_tests/: CMakeLists.txt  vec3_float_tests.cpp
tests/vec3/vec3_int_tests/: CMakeLists.txt
tests/vector/: CMakeLists.txt
tests/vector/vec2/: CMakeLists.txt  vec2_swizzle_tests.cpp
tests/vector/vec3/: CMakeLists.txt  vec3_double_tests.cpp  vec3_float_tests.cpp  vec3_int_tests.cpp  vec3_swizzle_tests.cpp  vec3_tests.cpp
tests/vector/vec4/: CMakeLists.txt  vec4_swizzle_tests.cpp
tests/vector/vector2/: CMakeLists.txt  vector2_swizzle_tests.cpp  vector2_tests.cpp
tests/vector/vector3/: CMakeLists.txt  vector3_swizzle_tests.cpp  vector3_tests.cpp
tests/vector/vector4/: CMakeLists.txt  vector4_swizzle_tests.cpp  vector4_tests.cpp
